# dn-killer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  Timer.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: atts.rs  main.rs
src/components/action-bar/: index.tsx
src/components/form-color-picker/: FormColorPicker.d.ts  index.tsx
src/components/form-hot-key/: FormHotKey.d.ts  index.tsx
src/components/form-slider/: FormSlider.d.ts  index.tsx
src/components/form-switch/: FormSwitch.d.ts  index.tsx
src/components/form-text-field/: FormTextFieldType.d.ts  FormTextFieldType.ts  index.tsx
src/components/header/: index.tsx
src/components/task-list/: Form.tsx  Item.tsx  index.tsx
src/hooks/: useAddDrag.ts  useAddDragData.ts  useMouse.ts  useResizeWindow.ts  useStopDefaultKeyBoardEvent.ts  useStopRightClickEvent.ts  useTauriEvent.ts  useUpdater.ts  useWindowBlur.ts
src/invoke/: index.ts
src/pages/check/: index.tsx
src/pages/home/: index.tsx
src/pages/home/select-group/: index.tsx
src/pages/setting/: Form.tsx  index.tsx
src/stores/: index.ts
