[package]
name = "dn-killer"
version = "0.0.3"
description = "DN-Killer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "notification-all", "window-close", "window-minimize", "window-set-size", "system-tray", "window-set-always-on-top", "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.11"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
tts = "0.26.1"
futures = "0.3.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
